Update release notes

--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Jetzt kannst du all deine ungelesenen Chats sehen, indem du die Chatliste nach unten ziehst. Filtere schnell heraus, was ungelesen ist, aber lass dir ruhig Zeit bei der Entscheidung, ob du etwas lesen möchtest oder nicht.
