--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• अब आप चैट को नीचे की तरफ़ खींचकर पढ़ी न गई सभी चैट आसानी से देख सकते हैं। पढ़ी न गई चैट्स को तुरंत फ़िल्टर करें, लेकिन उन्हें पढ़कर छोड़ना है या नहीं, यह फ़ैसला लेने के लिए पूरा समय लें।
