--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Da ora puoi vedere tutte le chat non lette tenendo premuto verso il basso e scorrendo nell'elenco delle chat. Scopri quali messaggi richiedono di più la tua attenzione: risponderai subito o ti farai attendere?
