--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Nu kan du nemt se alle dine ulæste chats ved at trække ned i chatlisten. Filtrér hurtigt, hvad der er ulæst, men tag dig gerne tid, mens du beslutter dig for, om du vil lade dem være ulæst.
