--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Ahora puedes ver tus chats no leídos desplazándote hacia abajo en la lista de chats. Filtra rápidamente los mensajes no leídos, pero no tengas prisa en decidirte a leerlos.
