--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Affichez toutes vos conversations non lues d'un seul geste : il suffit de faire glisser la liste de conversations vers le bas. Ne manquez plus aucun de vos messages. Mais libre à vous d'y répondre, de les ignorer ou de les marquer comme non lus pour y revenir plus tard.
