--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Kini Anda dapat dengan mudah melihat semua obrolan yang belum dibaca dengan menarik ke bawah di bagian daftar obrolan.
