--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Je kunt nu eenvoudig al je ongelezen chats zien door je chatlijst omlaag te trekken. Filter snel wat ongelezen is, maar neem gerust de tijd om te beslissen of je ze ook daadwerkelijk leest.
