--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Od teraz błyskawicznie wyświetlisz wszystkie nieodczytane wiadomości — wystarczy, że przeciągniesz w dół listę czatów. Spokojnie, to wcale nie znaczy, że musisz się spieszyć z odpisywaniem.
