--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Acum poți să vezi cu ușurință toate conversațiile tale necitite trăgând în jos în lista de chat. Filtrează rapid ceea ce nu este citit, dar nu ezita să-ți acorzi timp în timp ce decizi dacă să le lași citite sau nu.
