--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Теперь вы можете легко увидеть все непрочитанные чаты, проведя пальцем вниз по списку чатов. Быстро отфильтруйте непрочитанное, но можете не торопиться, решая, оставлять ли их в прочитанных.
