--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• Artık sohbet listesini aşağı çekerek tüm okunmamış sohbetlerini kolayca görebilirsin. Okunmamış sohbetleri hızla filtrele ancak okunmuş olarak bırakıp bırakmayacağına karar verirken de acele etme.
