--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can easily see all of your unread chats by pulling down in the chat list. Quickly filter what's unread, but feel free to take your time while deciding whether or not to leave them on read.
+• 你現在可以下拉聊天清單來輕鬆查看未讀聊天訊息。快速篩選未讀訊息，但也可以慢慢決定是否讓它們變為已讀狀態。
